# datapy

./: pyproject.toml
notebooks/: hello.ipynb  main.ipynb
